--- a/tuan_03/app.json
+++ b/tuan_03/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "youappfolder",
-    "slug": "youappfolder",
+    "name": "tuan_03",
+    "slug": "tuan_03",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
