--- a/tuan_03/package.json
+++ b/tuan_03/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "youappfolder",
+  "name": "tuan_03",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5"
