--- a/tuan_07_api/tuan_07_Bai1/package.json
+++ b/tuan_07_api/tuan_07_Bai1/package.json
@@ -17,7 +17,9 @@
     "react-native": "0.74.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0"
   },
   "private": true
 }
